--- a/frontend/shopforhome/src/app/app.component.html
+++ b/frontend/shopforhome/src/app/app.component.html
@@ -73,45 +73,31 @@
 </head>
 
 <body>
-  <p id = "p1"></p>
   <nav class="navbar navbar-inverse">
       <div class="container-fluid">
           <div class="navbar-header">
-              <a class="navbar-brand" href="#">WebSiteName</a>
+              <a class="navbar-brand" href="#">ShopForHome</a>
           </div>
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav navbar-center">
               <li class="active"><a href="#">Home</a></li>
               <li class="dropdown" ngbDropdown>
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" ngbDropdownToggle aria-expanded="false">
-                    Dropdown
+                    Categories
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu dropdown-menu-dark" ngbDropdownMenu aria-labelledby="navbarDarkDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="#">Outdoors</a></li>
+                    <li><a class="dropdown-item" href="#">Kitchen</a></li>
+                    <li><a class="dropdown-item" href="#">Living Room</a></li>
                 </ul>
             </li>                            
               <li><a href="#">Contact</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
               <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
               <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
       </div>
   </nav>
-  <form>
-      <div class="form-group">
-          <label for="email">Email address:</label>
-          <input type="email" class="form-control" id="email">
-      </div>
-      <div class="form-group">
-          <label for="pwd">Password:</label>
-          <input type="password" class="form-control" id="pwd">
-      </div>
-      <div class="checkbox">
-          <label><input type="checkbox"> Remember me</label>
-      </div>
-      <input type="button" value="Send"/>
-      <button type="submit" class="btn btn-default">Submit</button>
-  </form>
+    <h1> Welcome to ShopForHome. A place where you can shop for your home. </h1>
 </body> 
