created form in signup component

--- a/frontend/shopforhome/src/app/app.component.html
+++ b/frontend/shopforhome/src/app/app.component.html
@@ -8,7 +8,7 @@
           <ul class="nav navbar-nav navbar-center">
               <li ><a routerLink="/home">Home</a></li>
               <li class="dropdown" ngbDropdown>
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" ngbDropdownToggle aria-expanded="false">
+                <a class="nav-link dropdown-toggle" id="navbarDarkDropdownMenuLink" ngbDropdownToggle aria-expanded="false">
                     Categories
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu dropdown-menu-dark" ngbDropdownMenu aria-labelledby="navbarDarkDropdownMenuLink">
@@ -21,7 +21,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
-              <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+              <li><a routerLink="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
               <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
       </div>
