--- a/frontend/shopforhome/src/app/home/home.component.html
+++ b/frontend/shopforhome/src/app/home/home.component.html
@@ -1,5 +1,7 @@
-  
 <body>
-    <h1> Welcome to ShopForHome. A place where you can shop for your home. </h1>
-    <img src="assets/images/couch.jpg" alt="Couch" height ="300" width="300"/>
-</body> 
+    <h1>Welcome to ShopForHome. A place where you can shop for your home.</h1>
+
+    <img src="assets/images/couch.jpg" alt="Couch" height="300" width="300"/>
+    <img src="assets/images/simpleTable.jpg" alt="Simple Table" height="300" width="300"/>
+
+</body>
