--- a/frontend/shopforhome/src/app/signup/signup.component.html
+++ b/frontend/shopforhome/src/app/signup/signup.component.html
@@ -14,3 +14,5 @@
     </div>
     <button type="submit" class="btn btn-primary">Register</button>
 </form>
+
+<!-- http://localhost:9001/users/register signup -->
