global user styling component

--- a/frontend/shopforhome/src/app/home/home.component.html
+++ b/frontend/shopforhome/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-  
+<app-user-interface></app-user-interface>
 <body>
     <h1> Welcome to ShopForHome. A place where you can shop for your home. </h1>
     <img src="assets/images/couch.jpg" alt="Couch" height ="300" width="300"/>
