global styling added to outdoors

--- a/frontend/shopforhome/src/app/outdoors/outdoors.component.html
+++ b/frontend/shopforhome/src/app/outdoors/outdoors.component.html
@@ -1,4 +1,5 @@
-  <body>
+<app-user-interface></app-user-interface>
+<body>
       <h1> Welcome to great outdoors! A place where you can shop for your backyard or garden. </h1>
-  </body> 
+</body> 
   
