--- a/frontend/shopforhome/src/app/administrator-interface/administrator-interface.component.html
+++ b/frontend/shopforhome/src/app/administrator-interface/administrator-interface.component.html
@@ -2,10 +2,10 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" routerLink="/home">ShopForHome Administrator</a>
+                <a class="navbar-brand" routerLink="/">ShopForHome Administrator</a>
             </div>
             <ul class="nav navbar-nav navbar-center">
-                <li ><a routerLink="/home">Home</a></li>
+                <li ><a routerLink="/">Home</a></li>
                 <li class="dropdown" ngbDropdown>
                   <a class="nav-link dropdown-toggle" id="navbarDarkDropdownMenuLink" ngbDropdownToggle aria-expanded="false">
                       Categories
