uploaded a picture to outdoors component and added nav bar to sign up

--- a/frontend/shopforhome/src/app/outdoors/outdoors.component.html
+++ b/frontend/shopforhome/src/app/outdoors/outdoors.component.html
@@ -1,5 +1,6 @@
 <app-user-interface></app-user-interface>
 <body>
       <h1> Welcome to great outdoors! A place where you can shop for your backyard or garden. </h1>
+      <img src="assets/images/outdoorSofa.jpg" alt="Outdoor Sofa" height="300" width="500"/>
 </body> 
   
