--- a/frontend/shopforhome/src/app/outdoors/outdoors.component.html
+++ b/frontend/shopforhome/src/app/outdoors/outdoors.component.html
@@ -1,5 +1,4 @@
-<app-user-interface></app-user-interface>
+<app-user-interface-header></app-user-interface-header>
 <body>
       <h1> Welcome to great outdoors! A place where you can shop for your backyard or garden. </h1>
 </body> 
-  
