--- a/frontend/shopforhome/src/app/administrator-interface/administrator-interface.component.html
+++ b/frontend/shopforhome/src/app/administrator-interface/administrator-interface.component.html
@@ -2,21 +2,31 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" routerLink="/home">ShopForHome Administrator</a>
+                <a class="navbar-brand" routerLink="/admin">ShopForHome Administrator</a>
             </div>
             <ul class="nav navbar-nav navbar-center">
-                <li ><a routerLink="/home">Home</a></li>
-                <li class="dropdown" ngbDropdown>
+              <li class="dropdown" ngbDropdown>
                   <a class="nav-link dropdown-toggle" id="navbarDarkDropdownMenuLink" ngbDropdownToggle aria-expanded="false">
-                      Categories
+                      User Management
                   <span class="caret"></span></a>
                   <ul class="dropdown-menu dropdown-menu-dark" ngbDropdownMenu aria-labelledby="navbarDarkDropdownMenuLink">
-                      <li><a class="dropdown-item" routerLink="/outdoors">Outdoors</a></li>
-                      <li><a class="dropdown-item" href="#">Kitchen</a></li>
-                      <li><a class="dropdown-item" href="#">Living Room</a></li>
+                      <li><a class="dropdown-item" routerLink="/outdoors">Show Users</a></li>
+                      <li><a class="dropdown-item" href="#">Update User</a></li>
+                      <li><a class="dropdown-item" href="#">Delete User</a></li>
                   </ul>
-              </li>                            
-                <li><a href="#">Contact</a></li>
+              </li>
+              <li class="dropdown" ngbDropdown>
+                <a class="nav-link dropdown-toggle" id="navbarDarkDropdownMenuLink" ngbDropdownToggle aria-expanded="false">
+                    Product Management
+                <span class="caret"></span></a>
+                <ul class="dropdown-menu dropdown-menu-dark" ngbDropdownMenu aria-labelledby="navbarDarkDropdownMenuLink">
+                      <li><a class="dropdown-item" routerLink="/outdoors">Show Products</a></li>
+                      <li><a class="dropdown-item" routerLink="/outdoors">Show Products</a></li>
+                      <li><a class="dropdown-item" href="#">Update Product</a></li>
+                      <li><a class="dropdown-item" href="#">Delete Delete</a></li>
+                </ul>
+            </li>                           
+                
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
