--- a/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
+++ b/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
@@ -1,11 +1,12 @@
+<body>
 <div>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" routerLink="/home">ShopForHome</a>
+                <a class="navbar-brand" routerLink="/">ShopForHome</a>
             </div>
             <ul class="nav navbar-nav navbar-center">
-                <li ><a routerLink="/home">Home</a></li>
+                <li ><a routerLink="/">Home</a></li>
                 <li class="dropdown" ngbDropdown>
                   <a class="nav-link dropdown-toggle" id="navbarDarkDropdownMenuLink" ngbDropdownToggle aria-expanded="false">
                       Categories
@@ -26,3 +27,4 @@
         </div>
     </nav>
 </div>
+</body>
