--- a/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
+++ b/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
@@ -17,9 +17,10 @@
                       <li><a class="dropdown-item" href="#">Living Room</a></li>
                   </ul>
               </li>                            
-                <li><a href="#">Contact</a></li>
+                <li><a >Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span class="glyphicon glyphicon-heart"></span> WishList</a></li>
               <li><a routerLink="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
                 <li><a routerLink="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                 <li><a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
