adjusted navbar and added carousel for pictures

--- a/frontend/shopforhome/src/app/home/home.component.html
+++ b/frontend/shopforhome/src/app/home/home.component.html
@@ -1,6 +1,15 @@
 <app-user-interface-header></app-user-interface-header>
 <body>
-    <h1>Welcome to ShopForHome. A place where you can shop for your home.</h1>
-    <img src="assets/images/couch.jpg" alt="Couch" height="300" width="300"/>
-    <img src="assets/images/simpleTable.jpg" alt="Simple Table" height="300" width="300"/>
+    <h1 class ="text-center">Welcome to ShopForHome. A place where you can shop for your home.</h1>
+    <carousel>
+        <slide>
+          <img src="assets/images/couch.jpg" alt="Couch" style="display: block; width: 50%;">
+        </slide>
+        <slide>
+          <img src="assets/images/simpleTable.jpg" alt="Simple Table" style="display: block; width: 50%;">
+        </slide>
+        <slide>
+          <img src="assets/images/simpleChair.jpg" alt="Simple Chair" style="display: block; width: 50%;">
+        </slide>
+      </carousel>
 </body>
