updated route for home tab

--- a/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
+++ b/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
@@ -19,7 +19,7 @@
               </li>                            
                 <li><a href="#">Contact</a></li>
             </ul>-->
-            <a routerLink="/home">Home</a>
+            <a routerLink="/">Home</a>
             <div class="dropdown">
 
             <ul class="dropdown" ngbDropdown>
