added some UI elements to cart and wish list sections

--- a/frontend/shopforhome/src/app/components/cart/cart.component.html
+++ b/frontend/shopforhome/src/app/components/cart/cart.component.html
@@ -1,1 +1,36 @@
-<p>cart works!</p>
+<app-user-interface-header></app-user-interface-header>
+<div class="list-group">
+    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">DeskChair</h5>
+        <small>$29.99</small>
+      </div>
+      <p class="mb-1">Some placeholder content in a paragraph.</p>
+      <small>And some small print.</small>
+    </a>
+    <a href="#" class="list-group-item list-group-item-action">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Coffee Table</h5>
+        <small class="text-body-secondary">$84.99</small>
+      </div>
+      <p class="mb-1">Some placeholder content in a paragraph.</p>
+      <small class="text-body-secondary">And some muted small print.</small>
+    </a>
+    <a href="#" class="list-group-item list-group-item-action">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Lawn Chair</h5>
+        <small class="text-body-secondary">$55.99</small>
+      </div>
+      <p class="mb-1">Some placeholder content in a paragraph.</p>
+      <small class="text-body-secondary">And some muted small print.</small>
+    </a>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+        Total
+        <span class="badge text-bg-primary rounded-pill">${{29.99 + 84.99 + 55.99}}</span>
+      </li>
+  </div>
+  <div >
+    <button type="submit" class="btn btn-primary" >CheckOut</button>
+    <button type="reset">Clear Cart</button>
+  </div>
+  
