--- a/frontend/shopforhome/src/app/home/home.component.html
+++ b/frontend/shopforhome/src/app/home/home.component.html
@@ -3,10 +3,10 @@
     <h1 class ="text-center">Welcome to ShopForHome. A place where you can shop for your home.</h1>
     <carousel>
         <slide>
-          <img src="assets/images/couch.jpg" alt="Couch" style="display: block; width: 50%;">
+          <img src="assets/images/couch.jpg" alt="Couch" style=" width: 50%;">
         </slide>
         <slide>
-          <img src="assets/images/simpleTable.jpg" alt="Simple Table" style="display: block; width: 50%;">
+          <img src="assets/images/simpleTable.jpg" alt="Simple Table" style="width: 50%;">
         </slide>
         <slide>
           <img src="assets/images/simpleChair.jpg" alt="Simple Chair" style="display: block; width: 50%;">
