--- a/frontend/shopforhome/src/app/components/wishlist/wishlist.component.html
+++ b/frontend/shopforhome/src/app/components/wishlist/wishlist.component.html
@@ -1,1 +1,31 @@
-<p>wishlist works!</p>
+<app-user-interface-header></app-user-interface-header>
+<div class="list-group">
+    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Small Desk</h5>
+        <small>$50.99</small>
+      </div>
+      <p class="mb-1">Some placeholder content in a paragraph.</p>
+      <small>And some small print.</small>
+    </a>
+    <a href="#" class="list-group-item list-group-item-action">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Coffee Table</h5>
+        <small class="text-body-secondary">$84.99</small>
+      </div>
+      <p class="mb-1">Some placeholder content in a paragraph.</p>
+      <small class="text-body-secondary">And some muted small print.</small>
+    </a>
+    <a href="#" class="list-group-item list-group-item-action">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Dresser</h5>
+        <small class="text-body-secondary">$90.99</small>
+      </div>
+      <p class="mb-1">Some placeholder content in a paragraph.</p>
+      <small class="text-body-secondary">And some muted small print.</small>
+    </a>
+
+  </div>
+  <div>
+    <button type="reset">Clear WishList</button>
+  </div>
