--- a/frontend/shopforhome/src/app/login/login.component.html
+++ b/frontend/shopforhome/src/app/login/login.component.html
@@ -1,13 +1,17 @@
 <app-user-interface-header></app-user-interface-header>
-<form>
+<form style ="text-align: center; justify-content: center;max-width: 400px; margin: 0 auto;">
     <div class="form-group">
+        <div class="mb-3">
         <label for="username">Username:</label>
         <input type="text" class="form-control" id="username">
+        </div>
         
     </div>
     <div class="form-group">
+        <div class="mb-3">
         <label for="pwd">Password:</label>
         <input type="password" class="form-control" id="pwd">
+        </div>
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
