--- a/frontend/shopforhome/src/app/signup/signup.component.html
+++ b/frontend/shopforhome/src/app/signup/signup.component.html
@@ -1,10 +1,10 @@
 <app-user-interface-header></app-user-interface-header>
-<form style ="text-align: center; justify-content: center;max-width: 400px; margin: 0 auto;">
+<form (ngSubmit)="onSubmit()" #f="ngForm" style ="text-align: center; justify-content: center;max-width: 400px; margin: 0 auto;" >
     <div class="form-group">
         <div class="mb-3">
             <label for="username">Username:</label>
             <div class="col-sm">
-                <input type="text" class="form-control" id="username">
+                <input type="text" id="username" name="username" class="form-control" id="username" ngModel>
             </div>
         </div>
         
@@ -14,18 +14,20 @@
     <div class="form-group">
         <div class="mb-3">
             <label for="pwd">Password:</label>
-            <input type="password" class="form-control" id="pwd">
+            <input type="password" id="password"name="password" class="form-control" id="pwd" ngModel>
         </div>
         
     </div>
     <div class="form-group">
         <div class ="mb-3">
             <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email"> 
+        <input type="email" id="email" name = "email" class="form-control" id="email" ngModel> 
         </div>
         
     </div>
-    <button type="submit" class="btn btn-primary">Register</button>
+    <button [disabled]="!f.valid" type="submit" class="btn btn-primary">Register</button>
 </form>
 
-<!-- http://localhost:9001/users/register signup -->
+<!-- http://localhost:9001/users/register signup 
+ 
+-->
