--- a/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
+++ b/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
@@ -35,12 +35,12 @@
             </div> 
             <a href = "#">Contact</a>
             
-            <ul class="nav navbar-nav navbar-right">
-                <li><a routerLink="/wishlist"><span class="glyphicon glyphicon-heart"></span> WishList</a></li>
-              <li><a routerLink="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
-                <li><a routerLink="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                <li><a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            </ul>
+            <div class="nav navbar-nav navbar-right">
+                <a routerLink="/wishlist"><span class="glyphicon glyphicon-heart"></span> WishList</a>
+              <a routerLink="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a>
+                <a routerLink="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
+                <a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+            </div>
         </div>
     </nav>
 </div>
