adjusted outdoors component.html

--- a/frontend/shopforhome/src/app/outdoors/outdoors.component.html
+++ b/frontend/shopforhome/src/app/outdoors/outdoors.component.html
@@ -1,5 +1,26 @@
 <app-user-interface-header></app-user-interface-header>
 <body>
-      <h1> Welcome to great outdoors! A place where you can shop for your backyard or garden. </h1>
-      <img src="assets/images/outdoorSofa.jpg" alt="Outdoor Sofa" height="300" width="500"/>
+      <h1 class ="text-center"> Welcome to great outdoors! A place where you can shop for your backyard or garden. </h1>
+      <div class="card-group">
+      <div class="card" style="width: 18rem;">
+            <img src="assets/images/outdoorSofa.jpg" class="card-img-top" alt="Outdoor Sofa">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button type="button" class="btn">Add to WishList</button>
+              <button type="button" class="btn">Add to Cart</button>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem;">
+            <img src="assets/images/outdoorTableSet.jpg" class="card-img-top" alt="Outdoor Table Set">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button type="button" class="btn">Add to WishList</button>
+              <button type="button" class="btn">Add to Cart</button>
+            </div>
+          </div>
+      </div>
+      <p>Sourced from https://unsplash.com and https://www.pexels.com/</p>
 </body> 
