--- a/frontend/shopforhome/src/app/login/login.component.html
+++ b/frontend/shopforhome/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <app-user-interface-header></app-user-interface-header>
-<form #f="ngForm" style ="text-align: center; justify-content: center;max-width: 400px; margin: 0 auto;">
+<form (ngSubmit)="onSubmit()" #f="ngForm" style ="text-align: center; justify-content: center;max-width: 400px; margin: 0 auto;">
     <h1 class="text-center">Login</h1>
     <div class="form-group">
         <div class="mb-3">
@@ -16,3 +16,6 @@
     </div>
     <button [disabled]="!f.valid" type="submit" class="btn btn-primary">Login</button>
 </form>
+<div *ngIf="submitted">
+    {{status}}
+</div>
