--- a/frontend/shopforhome/src/app/signup/signup.component.html
+++ b/frontend/shopforhome/src/app/signup/signup.component.html
@@ -1,5 +1,6 @@
 <app-user-interface-header></app-user-interface-header>
-<form (ngSubmit)="onSubmit()" #f="ngForm" style ="text-align: center; justify-content: center;max-width: 400px; margin: 0 auto;" >
+<form #f="ngForm" (ngSubmit)="onSubmit(f)"
+    style="text-align: center; justify-content: center;max-width: 400px; margin: 0 auto;">
     <h1 class="text-center">Register</h1>
     <div class="form-group">
         <div class="mb-3">
@@ -8,31 +9,22 @@
                 <input type="text" id="username" name="username" class="form-control" id="username" ngModel required>
             </div>
         </div>
-        
-        
-        
     </div>
     <div class="form-group">
         <div class="mb-3">
             <label for="pwd">Password:</label>
-            <input type="password" id="password"name="password" class="form-control" id="pwd" ngModel required>
+            <input type="password" id="password" name="password" class="form-control" id="pwd" ngModel required>
         </div>
-        
     </div>
     <div class="form-group">
-        <div class ="mb-3">
+        <div class="mb-3">
             <label for="email">Email:</label>
-        <input type="email" id="email" name = "email" class="form-control" id="email" ngModel> 
+            <input type="email" id="email" name="email" class="form-control" id="email" ngModel>
         </div>
-        
     </div>
-    <button [disabled]="!f.valid" type="submit" class="btn btn-primary">Register</button>
+    <button [disabled]="!f.valid" type="submit" class="btn btn-primary">Register</button><br>
+    <div>
+        <p *ngIf="successMessage" class="text-success">{{successMessage}}</p>
+        <p *ngIf="errorMessage">{{errorMessage}}</p>
+    </div>
 </form>
-
-<div *ngIf="submitted">
-    {{status}}
-</div>
-
-<!-- http://localhost:9001/users/register signup 
- 
--->
