--- a/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
+++ b/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
@@ -1,4 +1,3 @@
-
 <div>
     <nav class="navbar" style="background-color: #E69930;">
         <div class="container-fluid">
@@ -6,32 +5,39 @@
                 <a class="navbar-brand" routerLink="/">ShopForHome</a>
             </div>
             <ul class="nav nav-pills">
-            <li class="nav-item"><a class ="nav-link" routerLink="/">Home</a></li>
-            <li class="nav-item dropdown">
+                <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
+                <li class="nav-item dropdown">
 
-            <ul class="dropdown" ngbDropdown>
-                <a class="nav-link dropdown-toggle" id="navbarDarkDropdownMenuLink" ngbDropdownToggle aria-expanded="false">
-                    Categories
-                <span class="caret"></span></a>
-                <ul class="dropdown-menu dropdown-menu-dark" ngbDropdownMenu aria-labelledby="navbarDarkDropdownMenuLink">
-                    <li><a class="dropdown-item" routerLink="/outdoors">Outdoors</a></li>
-                    <li><a class="dropdown-item" href="#">Kitchen</a></li>
-                    <li><a class="dropdown-item" href="#">Living Room</a></li>
-                </ul>
+                    <ul class="dropdown" ngbDropdown>
+                        <a class="nav-link dropdown-toggle" id="navbarDarkDropdownMenuLink" ngbDropdownToggle
+                            aria-expanded="false">
+                            Categories
+                            <span class="caret"></span></a>
+                        <ul class="dropdown-menu dropdown-menu-dark" ngbDropdownMenu
+                            aria-labelledby="navbarDarkDropdownMenuLink">
+                            <li><a class="dropdown-item" routerLink="/outdoors">Outdoors</a></li>
+                            <li><a class="dropdown-item" href="#">Kitchen</a></li>
+                            <li><a class="dropdown-item" href="#">Living Room</a></li>
+                        </ul>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Contact</a>
+                </li>
             </ul>
-        </li> 
-            <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Contact</a>
-              </li>
-        </ul>
             <ul class="nav justify-content-end">
-                <ul class ="nav nav-pills">
-                    <li class="nav-item"><a class ="nav-link" routerLink="/wishlist">WishList</a></li>
-                    <li class="nav-item"><a class ="nav-link"routerLink="/cart">Cart</a></li>
-                    <li class="nav-item"><a class ="nav-link"routerLink="/signup"> Sign Up</a></li>
-                    <li class="nav-item"><a class ="nav-link"routerLink="/login">Login</a></li>
+                <ul class="nav nav-pills">
+                    <li class="nav-item"><a class="nav-link" routerLink="/wishlist">WishList</a></li>
+                    <li class="nav-item"><a class="nav-link" routerLink="/cart">Cart</a></li>
+                    <ng-container *ngIf="!isLoggedIn; else loggedIn">
+                        <li class="nav-item"><a class="nav-link" routerLink="/signup"> Sign Up</a></li>
+                        <li class="nav-item"><a class="nav-link" routerLink="/login">Login</a></li>
+                    </ng-container>
+                    <ng-template #loggedIn>
+                        <li class="nav-item"><a class="nav-link" (click)="logout()">Logout</a></li>
+                        <li *ngIf="userRole === 'ADMIN'" class="nav-item"><a class="nav-link" routerLink="/admin">Admin Dashboard</a></li>
+                    </ng-template>
                 </ul>
-                
             </ul>
         </div>
     </nav>
