finished coding the display of cart items

--- a/frontend/shopforhome/src/app/outdoors/outdoors.component.html
+++ b/frontend/shopforhome/src/app/outdoors/outdoors.component.html
@@ -1,6 +1,17 @@
 <app-user-interface-header></app-user-interface-header>
 <body>
       <h1 class ="text-center"> Welcome to great outdoors! A place where you can shop for your backyard or garden. </h1>
+      <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Sort
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" >Alphabetical (A-Z)</a></li>
+              <li><a class="dropdown-item" >Alphabetical (Z-A)</a></li>
+              <li><a class="dropdown-item" >Price (Low to High)</a></li>
+              <li><a class="dropdown-item" >Price (High to Low)</a></li>
+            </ul>
+          </div>
       <div class="card-group">
       <div class="card" style="width: 18rem;">
             <img src="assets/images/outdoorSofa.jpg" class="card-img-top" alt="Outdoor Sofa">
