--- a/frontend/shopforhome/src/app/components/cart/cart.component.html
+++ b/frontend/shopforhome/src/app/components/cart/cart.component.html
@@ -1,46 +1,25 @@
 <app-user-interface-header></app-user-interface-header>
 <h1 class="text-center">Cart</h1>
-<div class="list-group">
-  <div>
-    <a class="list-group-item list-group-item-action" aria-current="true">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">DeskChair</h5>
-        <small>$29.99</small>
-      </div>
-      <p class="mb-1">Some placeholder content in a paragraph.</p>
 
+<div class="list-group">
+  <div *ngFor="let item of cartItemsWithDetails">
+    <a class="list-group-item list-group-item-action" aria-current="true">
+
+        <h5 class="mb-1">{{item.name}}</h5>
+        <div>
+          <small>{{item.quantity}}</small>
+        <small style ="float: right">{{item.price | currency}}</small>
+        </div>
+        
+      <p class="mb-1">{{item.description}}</p>
+      <small>And some small print.</small>
     </a>
     <button type="button" class="btn" style = "border-color: rgb(0, 0, 0);">Remove</button>
-    </div>
-    <div>
-    <a class="list-group-item list-group-item-action">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">Coffee Table</h5>
-        <small class="text-body-secondary">$84.99</small>
-      </div>
-      <p class="mb-1">Some placeholder content in a paragraph.</p>
-      
-    </a>
-    <button type="button" class="btn" style = "border-color: rgb(0, 0, 0);">Remove</button>
-    </div>
-    <div>
-    <a class="list-group-item list-group-item-action">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">Lawn Chair</h5>
-        <small class="text-body-secondary">$55.99</small>
-      </div>
-      <p class="mb-1">Some placeholder content in a paragraph.</p>
-      
-    </a>
-    <button type="button" class="btn" style = "border-color: rgb(0, 0, 0);">Remove</button>
-    </div>
-    <li class="list-group-item d-flex justify-content-between align-items-center">
-        Total
-        <span class="badge text-bg-primary rounded-pill">${{29.99 + 84.99 + 55.99}}</span>
-      </li>
   </div>
-  <div >
-    <button type="submit" class="btn btn-primary" >CheckOut</button>
-    <button type="reset">Clear Cart</button>
-  </div>
-  
+
+
+
+<div>
+  <button type="submit" class="btn btn-primary">CheckOut</button>
+  <button type="reset">Clear Cart</button>
+</div>
