--- a/frontend/shopforhome/src/app/administrator-interface/administrator-interface.component.html
+++ b/frontend/shopforhome/src/app/administrator-interface/administrator-interface.component.html
@@ -10,7 +10,7 @@
                       User Management
                   <span class="caret"></span></a>
                   <ul class="dropdown-menu dropdown-menu-dark" ngbDropdownMenu aria-labelledby="navbarDarkDropdownMenuLink">
-                      <li><a class="dropdown-item" routerLink="#">Show Users</a></li>
+                      <li><a class="dropdown-item" (click)="showUserManagement()">Show Users</a></li>
                       <li><a class="dropdown-item" href="#">Update User</a></li>
                       <li><a class="dropdown-item" href="#">Delete User</a></li>
                   </ul>
@@ -26,8 +26,28 @@
                       <li><a class="dropdown-item" href="#">Delete Delete</a></li>
                 </ul>
             </li>                           
-                
+            <li class="nav-item"><a class="nav-link" (click)="logout()" routerLink="/">Logout</a></li>
             </ul>
         </div>
     </nav>
 </div>
+
+<div *ngIf="showUsers && users.length > 0">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Role</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let user of users">
+                <td>{{user.username}}</td>
+                <td>{{user.email}}</td>
+                <td>{{user.role}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
