--- a/frontend/shopforhome/src/app/outdoors/outdoors.component.html
+++ b/frontend/shopforhome/src/app/outdoors/outdoors.component.html
@@ -14,7 +14,7 @@
           </div>
     
 
-      <div *ngFor="let product of products;" div class="card-group">
+      <div *ngFor="let product of products; index as i;" div class="card-group">
         <div class="card" style="width: 18rem;">
           <img src="assets/images/{{product.name}}.jpg" class="card-img-top" alt="Outdoor Table Set">
           <div class="card-body">
@@ -22,10 +22,10 @@
             <p class="card-text">{{product.description}} | Price: {{product.price}} dollars</p>
 
             <button type="button" class="btn">Add to WishList</button>
-            <button type="submit" (click) = "onClick(product.productId)" class="btn">Add to Cart</button>
-            <button type="submit" (click) = "decrement()" class="btn">-</button>
-            {{counter}}
-            <button type="submit" (click) = "increment()" class="btn">+</button>
+            <button type="submit" (click) = "onClick(product.productId, i)" class="btn">Add to Cart</button>
+            <button type="submit" (click) = "decrement(i)" class="btn">-</button>
+            {{product.counter}}
+            <button type="submit" (click) = "increment(i)" class="btn">+</button>
             
            
           </div>
