--- a/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
+++ b/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
@@ -34,7 +34,7 @@
                         <li class="nav-item"><a class="nav-link" routerLink="/login">Login</a></li>
                     </ng-container>
                     <ng-template #loggedIn>
-                        <li class="nav-item"><a class="nav-link" (click)="logout()">Logout</a></li>
+                        <li class="nav-item"><a class="nav-link" routerLink="/login" (click)="logout()">Logout</a></li>
                         <li *ngIf="userRole === 'ADMIN'" class="nav-item"><a class="nav-link" routerLink="/admin">Admin Dashboard</a></li>
                     </ng-template>
                 </ul>
