updated Admin dashboard UI

--- a/frontend/shopforhome/src/app/administrator-interface/administrator-interface.component.html
+++ b/frontend/shopforhome/src/app/administrator-interface/administrator-interface.component.html
@@ -4,7 +4,7 @@
             <div class="navbar-header">
                 <a class="navbar-brand" routerLink="/admin">ShopForHome Administrator</a>
             </div>
-            <ul class="nav navbar-nav navbar-center">
+            <ul class="nav nav-pills">
               <li class="dropdown" ngbDropdown>
                   <a class="nav-link dropdown-toggle" id="navbarDarkDropdownMenuLink" ngbDropdownToggle aria-expanded="false">
                       User Management
