--- a/frontend/shopforhome/src/app/components/product/product.component.html
+++ b/frontend/shopforhome/src/app/components/product/product.component.html
@@ -1,1 +1,36 @@
-<p>product works!</p>
+<app-administrator-interface></app-administrator-interface>
+<h1 class="text-center">Product Management</h1>
+<li class="dropdown" ngbDropdown>
+    <a class="nav-link dropdown-toggle" id="navbarDarkDropdownMenuLink" ngbDropdownToggle aria-expanded="false">
+        Product Management
+        <span class="caret"></span></a>
+    <ul class="dropdown-menu dropdown-menu-dark" ngbDropdownMenu aria-labelledby="navbarDarkDropdownMenuLink">
+        <li><a class="dropdown-item" (click)="showProductManagement()">Show Products</a></li>
+        <li><a class="dropdown-item" routerLink="#">Show Products</a></li>
+        <li><a class="dropdown-item" href="#">Update Product</a></li>
+        <li><a class="dropdown-item" href="#">Delete Delete</a></li>
+    </ul>
+</li>
+
+<div *ngIf="showProducts && products.length > 0">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Category</th>
+                <th>Stock</th>
+                <th>Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let product of products">
+                <td>{{product.name}}</td>
+                <td>{{product.description}}</td>
+                <td>{{product.category}}</td>
+                <td>{{product.stock}}</td>
+                <td>{{product.price | currency}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
