--- a/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
+++ b/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
@@ -27,15 +27,16 @@
             </ul>
             <ul class="nav justify-content-end">
                 <ul class="nav nav-pills">
-                    <li class="nav-item"><a class="nav-link" routerLink="/wishlist">WishList</a></li>
-                    <li class="nav-item"><a class="nav-link" routerLink="/cart">Cart</a></li>
                     <ng-container *ngIf="!isLoggedIn; else loggedIn">
                         <li class="nav-item"><a class="nav-link" routerLink="/signup"> Sign Up</a></li>
                         <li class="nav-item"><a class="nav-link" routerLink="/login">Login</a></li>
                     </ng-container>
                     <ng-template #loggedIn>
+                        <li class="nav-item"><a class="nav-link" routerLink="/wishlist">WishList</a></li>
+                        <li class="nav-item"><a class="nav-link" routerLink="/cart">Cart</a></li>
+                        <li *ngIf="userRole === 'ADMIN'" class="nav-item"><a class="nav-link" routerLink="/admin">Admin
+                            Dashboard</a></li>
                         <li class="nav-item"><a class="nav-link" routerLink="/login" (click)="logout()">Logout</a></li>
-                        <li *ngIf="userRole === 'ADMIN'" class="nav-item"><a class="nav-link" routerLink="/admin">Admin Dashboard</a></li>
                     </ng-template>
                 </ul>
             </ul>
