removed unnecessary line in wishlist html and added in product management

--- a/frontend/shopforhome/src/app/components/product/product.component.html
+++ b/frontend/shopforhome/src/app/components/product/product.component.html
@@ -1,18 +1,10 @@
 <app-administrator-interface></app-administrator-interface>
 <h1 class="text-center">Product Management</h1>
-<li class="dropdown" ngbDropdown>
-    <a class="nav-link dropdown-toggle" id="navbarDarkDropdownMenuLink" ngbDropdownToggle aria-expanded="false">
-        Product Management
-        <span class="caret"></span></a>
-    <ul class="dropdown-menu dropdown-menu-dark" ngbDropdownMenu aria-labelledby="navbarDarkDropdownMenuLink">
-        <li><a class="dropdown-item" (click)="showProductManagement()">Show Products</a></li>
-        <li><a class="dropdown-item" routerLink="#">Show Products</a></li>
-        <li><a class="dropdown-item" href="#">Update Product</a></li>
-        <li><a class="dropdown-item" href="#">Delete Delete</a></li>
-    </ul>
-</li>
+<button type="button" class="btn btn-primary">Add Product</button>
+<button type="button" class="btn btn-primary">Update Product</button>
+<button type="button" class="btn btn-primary">Delete All Products</button>
 
-<div *ngIf="showProducts && products.length > 0">
+
     <table class="table">
         <thead>
             <tr>
@@ -33,4 +25,3 @@
             </tr>
         </tbody>
     </table>
-</div>
